# dependence-forecastability

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  README.md  RELEASES.md  forecastability.code-workspace  llms.txt  lychee.toml  pyproject.toml  repo_contract.yaml
.github/: AGENT_FLOW.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  packaging_bug.md  release_checklist.md
.github/agents/: tester.agent.md
.github/instructions/: analyst.instructions.md  coder.instructions.md  devops.instructions.md  docs_plan.instructions.md  documenter.instructions.md  notebooks.instructions.md  python.instructions.md  reporter.instructions.md  rubber_duck.instructions.md  software_architect.instructions.md  statistician.instructions.md  tester.instructions.md
.github/workflows/: ci.yml  dependabot-automerge.yml  publish-pypi.yml  release.yml  repo-autofix.yml  smoke.yml
configs/: benchmark_exog_panel.yaml  benchmark_panel.yaml  canonical_examples.yaml  causal_rivers_analysis.yaml  exogenous_screening_workbench.yaml  interpretation_rules.yaml  performance_baseline.yaml  robustness_study.yaml  routing_validation_real_panel.yaml
docs/: README.md  agent_layer.md  api_contract.md  architecture.md  diagnostics_matrix.md  documentation_creation_manual.md  examples_index.md  executive_summary.md  forecast_prep_contract.md  golden_path.md  implementation_status.md  limitations.md  observability.md  production_readiness.md  public_api.md  quickstart.md  results_summary.md  surface_guide.md  use_cases_industrial.md  versioning.md  why_use_this.md  wording_policy.md
docs/archive/: 06_repository_structure.md  07_engineering_rules.md  08_core_config_objects.md  09_core_types.md  10_validation_layer.md  11_preserve_baseline_prototype.md  12_refactor_prototype_into_package_code.md  13_canonical_datasets.md  14_canonical_example_analysis_pipeline.md  15_summary_descriptors_to_quantify_what_pami_adds.md  16_plotting.md  17_rolling_origin_evaluation.md  18_baseline_forecasting_models.md  19_series_level_rolling_origin_evaluation_pipeline.md  20_cross_series_aggregation.md  21_tercile_analysis.md  22_interpretation_algorithm.md  24_reporting_module.md  25_canonical_examples_runner.md  26_benchmark_panel_runner.md  27_build_final_report_artifacts.md  30_linkedin_post_generator_content.md  35_run_order_for_the_coding_agent.md  37_download_real_m4_data.md  38_rerun_benchmark_with_real_data.md  39_rewrite_report_with_narrative.md  40_apply_code_formatting.md  41_expand_benchmark_panel.md  README.md
docs/code/: README.md  covariant_showcase.md  covariant_walkthrough.md  exog_analyzer.md  exog_analyzer_real_data.md  exog_benchmark_workflow.md  fingerprint_showcase.md  lag_aware_mod_mrmr.md  module_map.md
docs/decisions/: ADR-001-batched-phase-surrogate-design.md
docs/development/: local_workspace.md
docs/explanation/: architecture.md  extended_forecastability_profile.md  results_summary.md  surface_guide.md
docs/how-to/: extended_forecastability_fingerprint.md  golden_path.md
docs/maintenance/: data_download.md  developer_guide.md  (+4 more)
examples/: forecasting_triage_first.py  forecasting_triage_then_handoff.md  minimal_cli.sh  minimal_covariant.py  minimal_python.py
notebooks/: 01_canonical_forecastability.ipynb  02_exogenous_analysis.ipynb  03_agentic_triage.ipynb  03_causal_rivers.ipynb  04_agentic_screening.ipynb
scripts/: __init__.py  _forbid_cross_repo_staging.py  _repo_contract.py  bootstrap_local_workspace.sh  build_report_artifacts.py  check_docs_contract.py  check_markdown_links.py  check_notebook_contract.py  check_published_release.py  check_readme_surface.py  check_repo_contract.py  download_data.py  performance_common.py  profile_hotspots.py  rebuild_benchmark_fixture_artifacts.py  rebuild_causal_rivers_fixtures.py  rebuild_covariant_regression_fixtures.py  rebuild_diagnostic_regression_fixtures.py  rebuild_fingerprint_regression_fixtures.py  rebuild_forecast_prep_regression_fixtures.py  rebuild_lag_aware_mod_mrmr_regression_fixtures.py  rebuild_lagged_exog_regression_fixtures.py  rebuild_routing_validation_fixtures.py  run_ami_information_geometry_csv.py  run_benchmark_exog_panel.py  run_benchmark_panel.py  run_canonical_examples.py  run_canonical_triage.py  run_causal_rivers_analysis.py  run_entropy_complexity.py  run_exog_analysis.py  run_exogenous_driver_redundancy_screening.py  run_exogenous_screening_workbench.py  run_extended_fingerprint_showcase.py  run_largest_lyapunov_exponent.py  run_multi_series_comparison_report.py  run_multi_signal_diagnostic_ranking.py  run_performance_baseline.py  run_phase1_limit_diagnostics.py  run_robustness_study.py  (+12 more)
tests/: conftest.py  test_adapter_interface_contracts.py  test_ami_geometry_csv_runner.py  test_ami_information_geometry_service.py  test_analyzer.py  test_api.py  test_architecture_boundaries.py  test_batch_triage_f7.py  test_batched_knn_mi_kernel.py  test_benchmark_exog_panel.py  test_benchmark_reproducibility.py  test_build_forecast_prep_contract.py  test_build_forecast_prep_contract_covariant.py  test_calendar_feature_service.py  test_check_published_release.py  test_cli.py  test_cmi.py  test_complexity_band.py  test_config.py  test_covariant_agent_payload_models.py  test_covariant_facade.py  test_covariant_interpretation_agent.py  test_covariant_interpretation_service.py  test_covariant_models.py  test_covariant_regression.py  test_covariant_walkthrough_notebook.py  test_cross_correlation_profile_service.py  test_dashboard.py  test_diagnostic_regression.py  test_e6_operational_maturity.py  test_exog_curve_services.py  test_exogenous_screening_workbench.py  test_extended_forecastability_models.py  test_extended_forecastability_profile_service.py  test_extended_forecastability_service_scaffolds.py  test_extensions.py  test_fingerprint_agent.py  test_fingerprint_agent_interpretation_adapter.py  test_fingerprint_agent_payload_models.py  test_fingerprint_regression.py  (+98 more)
(+435 files in other folders)
