[project]
name = "dependence-forecastability"
version = "0.3.0"
description = "Forecastability triage for time series using AMI, pAMI, and covariate-aware dependence diagnostics before expensive model search."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Adam Krysztopa" }]
maintainers = [{ name = "Adam Krysztopa" }]
requires-python = ">=3.11,<3.13"
keywords = [
  "forecasting",
  "time-series",
  "mutual-information",
  "forecastability",
  "diagnostics",
  "triage",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]
dependencies = [
  "matplotlib>=3.10.8,<4",
  "numpy>=2.4.4,<3",
  "pandas>=3.0.2,<4",
  "scikit-learn>=1.8.0",
  "scipy>=1.17.1",
  "statsmodels>=0.14.6",
  "pyyaml>=6.0.3",
  "yfinance>=1.3.0",
  "pydantic>=2.13.2,<3",
  "pydantic-settings>=2.13.1,<3",
]

[project.urls]
Homepage = "https://github.com/AdamKrysztopa/dependence-forecastability"
GitHub = "https://github.com/AdamKrysztopa/dependence-forecastability"
Documentation = "https://github.com/AdamKrysztopa/dependence-forecastability/blob/main/docs/quickstart.md"
Source = "https://github.com/AdamKrysztopa/dependence-forecastability"
Issues = "https://github.com/AdamKrysztopa/dependence-forecastability/issues"
PyPI = "https://pypi.org/project/dependence-forecastability/"
Changelog = "https://github.com/AdamKrysztopa/dependence-forecastability/blob/main/CHANGELOG.md"

[project.optional-dependencies]
agent = [
  "pydantic-ai>=1.84.1",
]
causal = [
  "tigramite>=5.2.10.1",
]
transport = [
  "fastapi>=0.136.0",
  "uvicorn[standard]>=0.44.0",
  "mcp>=1.27.0",
]

[project.scripts]
forecastability = "forecastability.adapters.cli:main"
forecastability-dashboard = "forecastability.adapters.dashboard:main"

[dependency-groups]
dev = [
  "anyio>=4.13.0",
  "build>=1.4.3",
  "httpx>=0.28.1",
  "pytest>=9.0.3",
  "pytest-anyio>=0.0.0",
  "ruff>=0.15.11",
  "twine>=6.2.0",
  "ty==0.0.31",
]
notebook = [
  "jupyter>=1.1.1",
  "jupyterlab>=4.5.6",
  "ipykernel>=7.2.0",
  "nbformat>=5.10.4",
  "nbconvert>=7.17.1",
  "ipywidgets>=8.1.8",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forecastability"]

[tool.hatch.build.targets.sdist]
exclude = [
  "notebooks/",
  ".codex/",
  ".vscode/",
  "docs/archive/",
  "docs/plan/",
  "tmp/",
  "outputs/",
  "data/raw/m4/",
  "data/raw/causal_rivers/",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
exclude = ["notebooks/"]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
