[project]
name = "dependence-forecastability"
version = "0.3.4"
description = "Forecastability triage for time series using AMI, pAMI, and covariate-aware dependence diagnostics before expensive model search."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Adam Krysztopa" }]
maintainers = [{ name = "Adam Krysztopa" }]
requires-python = ">=3.11,<3.13"
keywords = [
  "forecasting",
  "time-series",
  "mutual-information",
  "forecastability",
  "diagnostics",
  "triage",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]
dependencies = [
  "matplotlib>=3.9,<4",
  "numpy>=2.0,<3",
  "pandas>=2.1,<4",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "pyyaml>=6.0",
  "yfinance>=0.2",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.7,<3",
]

[project.urls]
Homepage = "https://github.com/AdamKrysztopa/dependence-forecastability"
GitHub = "https://github.com/AdamKrysztopa/dependence-forecastability"
Documentation = "https://github.com/AdamKrysztopa/dependence-forecastability/blob/main/docs/quickstart.md"
Source = "https://github.com/AdamKrysztopa/dependence-forecastability"
Issues = "https://github.com/AdamKrysztopa/dependence-forecastability/issues"
PyPI = "https://pypi.org/project/dependence-forecastability/"
Changelog = "https://github.com/AdamKrysztopa/dependence-forecastability/blob/main/CHANGELOG.md"

[project.optional-dependencies]
agent = [
  "pydantic-ai>=0.2",
]
causal = [
  "tigramite>=5.2",
]
transport = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "mcp>=1.0",
]
calendar = [
  "holidays>=0.50",
]

[project.scripts]
forecastability = "forecastability.adapters.cli:main"
forecastability-dashboard = "forecastability.adapters.dashboard:main"

[dependency-groups]
dev = [
  "anyio>=4.12.1",
  "build>=1.0",
  "httpx>=0.27",
  "pytest>=8.4.0",
  "pytest-anyio>=0.0.0",
  "pytest-xdist>=3.6",
  "ruff>=0.11.0",
  "twine>=5.0",
  "ty==0.0.22",
]
examples = [
  "jupyter>=1.1.1",
  "jupyterlab>=4.3.5",
  "ipykernel>=6.29.5",
  "nbformat>=5.10.4",
  "nbconvert>=7.16.4",
  "ipywidgets>=8.1.5",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forecastability"]

[tool.hatch.build.targets.sdist]
exclude = [
  "notebooks/",
  ".codex/",
  ".vscode/",
  "docs/archive/",
  "docs/plan/",
  "tmp/",
  "outputs/",
  "data/raw/m4/",
  "data/raw/causal_rivers/",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
exclude = ["notebooks/"]

[tool.ty.environment]
extra-paths = ["scripts"]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
